--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,9 @@
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/57d392b365.js" crossorigin="anonymous"></script>
     <!-- css -->
-    <link rel="stylesheet" type="text/css" href="css/common.css">
-    <link rel="stylesheet" type="text/css" href="css/design.css">
-    <link rel="stylesheet" type="text/css" href="css/animation.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/css/common.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/css/animation.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/css/design.css')}}">
 </head>
 <body>
     <div class="wrap">
