--- a/static/css/animation.css
+++ b/static/css/animation.css
@@ -40,3 +40,22 @@
         left: -10%;
     }
 }
+
+/* HeartBeat Effect */
+@keyframes heartBeat {
+	from{
+		transform: scale(1);
+	}
+	14% {
+		transform: scale(1.3);
+	}
+	28% {
+		transform: scale(1);
+	}
+	42% {
+		transform: scale(1.3);
+	}
+	70% {
+		transform: scale(1);
+	}
+}
