--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/css/common.css')}}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/css/animation.css')}}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/css/design.css')}}">
+    <!--favicon-->
+    <link rel="shortcut icon" href="{{ url_for('static', path='/img/favicon.ico') }}">
 </head>
 <body>
     <div class="top_btn fix_btn"><i class="fas fa-arrow-up"></i></div>
@@ -33,19 +35,19 @@
                 <div class="kakao_msg_info">연락을 원하시면 언제든지 메세지를 보내주세요.</div>
                 <form id="kakao_form">
                     <div class="kakao_input_area">
-                        <div class="kakao_input_box">
+                        <div class="kakao_input_box">   <!--이름 입력-->
                             <input type="text" name="kakao_name" class="kakao_input" id="kakao_name">
                             <label for="kakao_name" class="kakao_input_label">NAME</label>
                         </div>
-                        <div class="kakao_input_box">
+                        <div class="kakao_input_box">   <!--이메일 입력-->
                             <input type="text" name="kakao_email" class="kakao_input" id="kakao_email">
                             <label for="kakao_email" class="kakao_input_label">EMAIL</label>
                         </div>
-                        <div class="kakao_input_box">
+                        <div class="kakao_input_box">   <!--메세지 입력-->
                             <input type="text" name="kakao_message" class="kakao_input" id="kakao_message">
                             <label for="kakao_message" class="kakao_input_label">MESSAGE</label>
                         </div>
-                        <button type="button" id="send_kakao_btn">
+                        <button type="button" id="send_kakao_btn">  <!--버튼 클릭-->
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M11.998 4c-5.387 0-9.753 3.443-9.753 7.69 0 2.746 1.826 5.158 4.572 6.516-.15.515-.96 3.314-.992 3.535 0 0-.02.165.087.227a.295.295 0 00.232.015c.308-.044 3.564-2.327 4.127-2.72.572.08 1.15.118 1.727.117 5.387 0 9.754-3.443 9.754-7.69S17.384 4 11.998 4z" fill="#000", fill-opacity=".9"></path>
                             </svg>
@@ -108,13 +110,13 @@
             <div class="sub_box skill_box">
                 <div class="sub_title">Skills</div>
                 <div class="bar_wrap">
-                    <div class="skill_title"><strong>Web</strong></div>
-                    <div><div class="bar_border"><div class="bar_fill" style="width: 30%">30%</div></div></div>
+                    <div class="skill_title"><strong>FrontEnd</strong></div>
+                    <div><div class="bar_border"><div class="bar_fill" style="width: 60%">60%</div></div></div>
                 </div>
 
                 <div class="bar_wrap">
-                    <div class="skill_title"><strong>IoT</strong></div>
-                    <div><div class="bar_border"><div class="bar_fill" style="width: 40%">40%</div></div></div>
+                    <div class="skill_title"><strong>BackEnd</strong></div>
+                    <div><div class="bar_border"><div class="bar_fill" style="width: 20%">20%</div></div></div>
                 </div>
 
                 <div class="bar_wrap">
@@ -128,8 +130,8 @@
                 </div>
 
                 <div class="bar_wrap">
-                    <div class="skill_title"><strong>AI</strong></div>
-                    <div><div class="bar_border"><div class="bar_fill" style="width: 20%">20%</div></div></div>
+                    <div class="skill_title"><strong>IoT</strong></div>
+                    <div><div class="bar_border"><div class="bar_fill" style="width: 40%">40%</div></div></div>
                 </div>
             </div>
 
