--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="chat_msg_box_right">
                         <span class="chat_msg_date"></span>
-                        <span class="chat_msg_info">Hello, I'm Cholong. 무엇이든 물어보세요. </span>
+                        <span class="chat_msg_info">Hello, I'm RiveroadKim. 무엇이든 물어보세요. </span>
                     </div>
                 </div>    
             </div>
