--- a/static/css/design.css
+++ b/static/css/design.css
@@ -1,15 +1,18 @@
 body {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     height: 100vh;
+    margin: 0;
 }
 .wrap {
     max-width: 120rem;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     box-sizing: border-box;
     padding: 2.5rem 1rem;
     gap: 1rem;
-    flex-flow: row wrap;
     align-content: flex-start;
 }
 .common_box {
@@ -93,6 +96,10 @@ body {
 .sns_btn:nth-child(5) {color: #ff0000;}
 .sns_btn:nth-child(6) {color: #2F3138;}
 
+.sns_box {
+    font-size: 2.5rem;
+    line-height: 4.5rem;
+}
 .sns_box {
     width: 45rem;
     height: 8rem;
